FEATURE: collapse menu links in bar on mobile
Optional setting to collapse links under hamburger menu, when mobile header bar is enabled

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -56,4 +56,12 @@
   .title {
     padding: 0px;
   }
+  .hamburger-panel {
+    position: absolute;
+    right: 0;
+    z-index: 2000;
+  }
+  ul.icons>li {
+    float: right;
+  }
 }
